rust_compiler/libs/integration_tests/src/snapshots/integration_tests__device_indexing_tests__device_indexing_complex_expression.snap
---
source: libs/integration_tests/src/device_indexing_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r2 r15
move r1 5
move r3 100
sll r2 r2 16
and r1 r1 255
sll r1 r1 8
or r2 r2 r1
and r1 r3 255
or r1 r2 r1
move r3 r1
move r2 1
mul r1 r2 256
add r1 r1 100
move r1 r1
put d0 r1 r3
add r1 r2 0
mul r1 r1 256
add r1 r1 100
move r1 r1
get r1 d0 r1
move r1 r1

## Optimized Output

move r2 r15
sll r2 r2 16
move r1 1280
or r2 r2 r1
move r1 100
or r3 r2 r1
move r2 1
move r1 356
put d0 r1 r3
move r1 356
get r1 d0 r1
