rust_compiler/libs/integration_tests/src/snapshots/integration_tests__device_indexing_tests__device_indexing_optimization_folds_constants.snap
---
source: libs/integration_tests/src/device_indexing_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r1 -62440604628430
put d0 255 r1
get r1 d0 255
move r1 r1

## Optimized Output

move r1 -62440604628430
put d0 255 r1
get r1 d0 255
