rust_compiler/libs/integration_tests/src/snapshots/integration_tests__device_indexing_tests__device_indexing_with_binary_literals.snap
---
source: libs/integration_tests/src/device_indexing_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r2 165
move r1 240
and r1 r2 r1
put d0 0 r1
get r1 d0 0

## Optimized Output

move r2 165
move r1 160
put d0 0 r1
get r1 d0 0
