rust_compiler/libs/integration_tests/src/snapshots/integration_tests__device_indexing_tests__device_indexing_with_computed_index.snap
---
source: libs/integration_tests/src/device_indexing_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r2 10
move r1 5
add r1 r2 r1
move r2 r1
move r1 42
put d1 r2 r1
get r1 d1 r2
move r1 r1

## Optimized Output

move r2 15
move r1 42
put d1 r2 r1
get r1 d1 r2
