rust_compiler/libs/integration_tests/src/snapshots/integration_tests__device_indexing_tests__device_indexing_with_hash_and_binary_literals.snap
---
source: libs/integration_tests/src/device_indexing_tests.rs
expression: output
---
## Unoptimized Output

j main
main:
move r2 -1301215609
move r1 16
move r3 7
sll r2 r2 16
sll r1 r1 8
or r1 r2 r1
or r2 r1 r3
move r1 255
put d0 r1 r2
get r1 d0 r1

## Optimized Output

move r3 7
move r2 -85276466147321
move r1 255
put d0 r1 r2
get r1 d0 r1
